--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -56,6 +56,10 @@
                                     <constraint firstAttribute="trailing" secondItem="udy-Ot-bqh" secondAttribute="trailing" id="1w3-VS-Hft"/>
                                 </constraints>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KVd-ck-ebz" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
+                                <rect key="frame" x="16" y="472" width="200" height="110"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
